[DEV-8737] fixed alignment

--- a/src/_scss/pages/agency/index.scss
+++ b/src/_scss/pages/agency/index.scss
@@ -29,6 +29,10 @@
 		}
 	}
 
+    .usda-page-header__toolbar .usa-dt-picker .usa-dt-picker__dropdown-container .usa-dt-picker__list .usa-dt-picker__item { 
+        padding-left: 25px;
+    }
+
 	.usda__flex-row {
 		@include display(flex);
 		@include flex-wrap(wrap);
