--- a/src/_scss/pages/state/statePage.scss
+++ b/src/_scss/pages/state/statePage.scss
@@ -11,6 +11,10 @@
 			border-bottom: rem(1) solid $color-gray-lighter;
 		}
 	}
+    
+	.usda-page-header__toolbar .usa-dt-picker .usa-dt-picker__dropdown-container .usa-dt-picker__list .usa-dt-picker__item { 
+        padding-left: 25px;
+    }
 
     .main-content {
         @import "../../mixins/fullSectionWrap";
